small memory improvement, changing new Boolean() to Boolean.valueOf() & improve loop